# CursesGUI

./: CMakeLists.txt  README.md  todo.txt
CursesGUI/: CMakeLists.txt  ISSUES
CursesGUI/src/: caction.h  canimation.cpp  canimation.h  capplication.cpp  capplication.h  cbitmap.h  ccolor.h  ccursor.cpp  cdefs.h  cdialog.cpp  cdialog.h  cenums.h  cevent.h  ceventloop.h  cgui_string.h  chlayout.h  cinput.h  clayout.cpp  cmainwindow.cpp  cmargins.cpp  cmargins.h  cmenubar.cpp  cmenubar.h  cobject.cpp  cobject.h  components.h  cpalette.h  cpoint.h  crect.cpp  crect.h  cscreen.cpp  cscreen.h  csize.h  cstatusbar.h  cstretch.h  cstyle.cpp  cstyle.h  ctextproperties.cpp  ctextproperties.h  ctimer.cpp  (+13 more)
CursesGUI/src/CursesGUI/: caction.cpp  caction.h  canimation.h  capplication.cpp  capplication.h  ccolor.cpp  ccursor.h  ceventloop.cpp  ceventloop.h  chlayout.h  clayout.cpp  clayout.h  clist.h  cmainwindow.h  cmargins.h  cmenubar.h  cobject.cpp  cobject.h  cpalette.h  cregistry.cpp  cregistry.h  cscreen.h  cstatusbar.cpp  cstatusbar.h  cstretch.h  cviewport.cpp  cviewport.h  cvlayout.h  cwidget.cpp  cwidget.h  cwindow.h  cwindowframe.h  renderer.cpp
CursesGUI/src/CursesGUI/Core/: input.cpp  input.h  listener.h  ui.cpp
CursesGUI/src/CursesGUI/ECS/: child_element_lookup_system.cpp  child_element_lookup_system.h  color_system.cpp  components.h  dimensions_system.cpp  dimensions_system.h  info_system.cpp  movement_system.cpp  position_system.cpp  render_system.cpp  render_system.h  utility_system.cpp  utility_system.h
CursesGUI/src/CursesGUI/Elements/: button.cpp  checkbox.cpp  checkbox.h  divider.cpp  drop_down.cpp  drop_down.h  element.cpp  ielement.cpp  ielement.h  line_break.h  list.h  number_field.cpp  panel.cpp  panel.h  progress_bar.cpp  progress_bar.h  text.cpp  text_box.h  text_field.h  viewport.cpp
CursesGUI/src/ECS/: attributes_system.h  color_system.h  dimensions_system.h  position_system.h  render_system.cpp  render_system.h  utility_system.h
CursesGUI_TestClient/: application.cpp
CursesGUI_old/: CMakeCache.txt  CMakeLists.txt  ISSUES  Makefile  cmake_install.cmake
CursesGUI_old/CursesGUI/src/CursesGUI/Core/: binds.h  input.h  ui.cpp  ui.h
CursesGUI_old/CursesGUI/src/CursesGUI/ECS/: attributes_system.cpp  attributes_system.h  color_system.h  components.h  dimensions_system.cpp  info_system.h  listener_system.cpp  listener_system.h  movement_system.cpp  movement_system.h  position_system.cpp  position_system.h  render_system.cpp  render_system.h
CursesGUI_old/CursesGUI/src/CursesGUI/Elements/: button.h  divider.h  element.cpp  element.h  ielement.h  line_break.cpp  list.cpp  list_item.cpp  list_item.h  number_field.h  panel.cpp  panel.h  scroll_box.cpp  scroll_box.h  text.h  text_box.cpp  text_field.cpp  viewport.cpp  viewport.h
CursesGUI_old/CursesGUI_TestClient/: application.cpp  application.h  main.cpp
